src/test/deca/context/invalid/pierre/objects/classToType.deca
class A {
    int a;
}
{
    A b = new A();
    int i = (int)(b);
}